[package]
name = "pane"
version = "0.2.0-pre"
authors = ["Elias Sjögreen"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = { git = "https://github.com/eliassjogreen/deno.git" }
winit = { version = "0.24.0", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_millis = "0.1.1"
